<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="off"
        android:hint="@string/hint_edad"
        android:inputType="number" />

    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="postalAddress"
        android:hint="@string/hint_ciudad"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_continuar" />

</LinearLayout>